--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,33 +1,20 @@
-# Utilise ici une image PHP avec Apache
-FROM php:8.1-apache
+FROM php:8.2-apache
 
-# Installe les dépendances nécessaires
-RUN apt-get update && \
-    apt-get install -y \
-    libicu-dev \
-    zlib1g-dev \
-    libzip-dev \
-    unzip \
-    && docker-php-ext-install -j$(nproc) intl pdo_mysql zip
-
-# Configure apache
-RUN a2enmod rewrite && \
-    service apache2 restart
-
-RUN echo "DocumentRoot /var/www/html/public" >> /etc/apache2/apache2.conf
 RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
-# Définir le répertoire de travail
-WORKDIR /var/www/html
 
-# Copier les fichiers de l'application dans le conteneur
-COPY . .
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends locales apt-utils git libicu-dev g++ libpng-dev libxml2-dev libzip-dev libonig-dev libxslt-dev;
 
-# Installer les dépendances Symfony
-RUN curl -sSkk https://getcomposer.org/installer | php -- --disable-tls
-RUN mv    composer.phar /usr/local/bin/composer
+RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && \
+    echo "fr_FR.UTF-8 UTF-8" >> /etc/locale.gen && \
+    locale-gen
 
-# Expose le port 80
-EXPOSE 80
+RUN curl -sSk https://getcomposer.org/installer | php -- --disable-tls && \
+   mv composer.phar /usr/local/bin/composer
 
-# Commande pour lancer Apache
-CMD ["apache2-foreground"]
+RUN docker-php-ext-configure intl
+RUN docker-php-ext-install pdo pdo_mysql gd opcache intl zip calendar dom mbstring zip gd xsl
+RUN pecl install apcu && docker-php-ext-enable apcu
+
+
+WORKDIR /var/www/
